--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
       <h1>index.html</h1>
       <p>this is my website</p>
+      <a href="https://rroll.to/XaH1uE">Click here</a>
     </body>
   </html>
