--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <li><a href="#">About (not avaliable yet)</a></li>
         </ul>
         <h2>hi!</h2>
-        <p>I'm cl, </p>
+        <p>I'm cl, and I have literally nothing to say here.</p>
+        <p>Well there's <a href="https://github.com/cleabent">my github</a>, or <a href="https://x.com/cl_isnt_Cl">me on was-Twitter platform posting randomest stuff possible.</a>
+        <p>Other socials... I'll just make page for it later, whenever my procrastination ends.</p>
     </body>
     <footer>
         cl,2023
