--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About (not avaliable yet)</a></li>
-        </ul>
+            <li><a href="#">Socials (not avaliable yet)</a></li>
+	</ul>
         <h2>hi!</h2>
         <p>I'm cl, and I have literally nothing to say here.</p>
         <p>Well there's <a href="https://github.com/cleabent">my github</a>, or <a href="https://x.com/cl_isnt_Cl">me on was-Twitter platform posting randomest stuff possible.</a>
