--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>I'm cl, and I have literally nothing to say here.</p>
         <p>Well there's <a href="https://github.com/cleabent">my github</a>, or <a href="https://x.com/cl_isnt_Cl">me on was-Twitter platform posting randomest stuff possible.</a>
         <p>Other socials... I'll just make page for it later, whenever my procrastination ends.</p>
+        <p>I really need to learn CSS... I have no idea</p>
         <p>P.S. I have an discord server! (ad?)</p>
         <iframe src="https://discord.com/widget?id=1137896133990031431&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </body>
